<resources>

    <!-- Nome do app -->
    <string name="app_name">Medida Exata</string>

    <!-- Main -->
    <string name="menu">Menu inicial</string>
    <string name="seja_bem_vindo_ao">Seja bem-vindo ao</string>

    <string name="toque_em_um_botao">Toque em um dos botões abaixo para começar!</string>
    <string name="conquistas">Conquistas</string>

    <!-- Questões ou Matéria -->
    <string name="qro_ver_as_questoes_da_disciplina">Quero ver as questões de </string>
    <string name="qro_ver_as_materias_da_disciplina">Quero ver as matérias de </string>
    <string name="toque_neste_botao_para_ver_conteudos">Toque neste botão para ver os conteúdos da disciplina, escolha um e veja as questões que o abordam</string>
    <string name="toque_neste_botao_para_ver_as_materias_que_abordam_essa_disciplina">Toque neste botão para ver as matérias que abordam essa disciplina</string>

    <!-- Pontuação -->
    <string name="voce_ganhou">Você ganhou</string>
    <string name="uhu_pontos">Pontos!</string>
    <string name="vc_e_bom">Você é bom mesmo hein, quer ver a matéria para aumentar ainda mais o seu conhecimento?</string>
    <string name="claro_que_sim">Claro que sim!</string>
    <string name="quero_voltar">Não, quero voltar pra o Menu</string>
    <string name="parabens">Parabéns!!!</string>

    <!-- VerMatéria -->
    <string name="qro_ir_para_menu">Quero voltar para o menu agora</string>
    <string name="qro_ver_materias">Quero ver outras matérias</string>

    <!-- Boas vindas -->
    <string name="seja_bem_vindo">Seja bem-vindo</string>
    <string name="bem_vindo">Bem vindo</string>
    <string name="texto_onboarding_1">
        Se você está usando o aplicativo pela primeira vez, veja esse breve tutorial para aprender mais! O aplicativo foi desenvolvido pensando em reforçar seus conhecimentos do último ano do Ensino Fundamental em Matemática e Ciências.
    </string>

    <string name="titulo_onboarding_2">
        Como estudar pelo aplicativo?
    </string>
    <string name="texto_onboarding_2">
        O primeiro passo é escolher uma das duas disciplinas contempladas: Matemática ou Ciências. Clique sobre o botão da disciplina correspondente no menu inferior. Neste menu, há também um botão para seu Perfil, onde você poderá ver seus dados, como o seu desempenho nos estudos.
    </string>

    <string name="titulo_onboarding_3">
        Escolha um conteúdo!
    </string>
    <string name="texto_onboarding_3">
        Depois, é hora de escolher um dentre os vários conteúdos disponibilizados para a disciplina. Ao clicar sobre o conteúdo desejado, você será direcionado para uma nova tela com questões exibidas de forma minimizada.
    </string>

    <string name="titulo_onboarding_4">
        Escolha uma questão!
    </string>
    <string name="texto_onboarding_4">
        Cada uma das questões exibidas está relacionada ao conteúdo selecionado, abordando de forma específica uma matéria. Você pode então visualizar todo o conteúdo de uma questão e tentar respondê-la clicando sobre “VER QUESTÃO”. Ainda, ao clicar sobre “VER MATÉRIA” é apresentado um breve resumo sobre a matéria correspondente a uma determinada questão.
    </string>

    <string name="titulo_onboarding_5">
        Ganhe pontos!
    </string>
    <string name="texto_onboarding_5">
        Ao responder a questão selecionada, o sistema imediatamente exibe seu resultado, computando seus pontos e enviando as estatísticas para seu desempenho.
    </string>

    <string name="titulo_onboarding_6">
        Veja matérias muito interessantes!
    </string>
    <string name="texto_onboarding_6">
        Se você optou por ver a matéria, um resumo sobre a mesma será exibido, na forma de texto, podendo ter imagens para ajudar na explicação. Ao finalizar o estudo da matéria, você poderá voltar aos menus anteriores para estudar ainda mais!
    </string>

    <string name="titulo_onboarding_7">
        Esperamos que você se divirta e aprenda muito!
    </string>
    <string name="texto_onboarding_7">
    </string>

    <string name="pular">Pular</string>
    <string name="proximo">Próximo</string>
    <string name="vamos_comecar">Vamos começar!!</string>

    <!-- ItemQuestao -->
    <string name="con_abordado">Matéria abordada:</string>
    <string name="ver_questao">Ver questão</string>
    <string name="ver_materia">Ver matéria</string>

    <!-- Matérias -->
    <string name="disc_matematica">Matemática</string>
    <string name="matematica">matematica</string>
    <string name="biologia">Biologia</string>
    <string name="disc_ciencias">Ciências</string>
    <string name="ciencias">ciencias</string>
    <string name="cienciasAllCaps">CIÊNCIAS</string>
    <string name="fisica">Física</string>
    <string name="quimica">Química</string>

    <!-- Conquistas -->
    <string name="vc_tem">você tem</string>
    <string name="pontos_em">pontos em</string>
    <string name="e">e</string>
    <string name="suas_conquistas">Suas conquistas</string>
    <string name="totalizando">Totalizando</string>
    <string name="seu_nome_aqui">Seu nome aqui</string>

    <!-- NomeUsuarioDialog -->
    <string name="ola_bem_vindo">Oi! Seja bem-vindo(a) ao Medida Exata. Como você prefere ser chamado(a)?</string>
    <string name="pronto">Pronto!</string>
    <string name="nome_vazio">Você digitou um nome vazio</string>

    <!-- Content Description(s)-->
    <string name="ctntdes_iv_medida_exata_logo">Logo do aplicativo Medida Exata</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
