<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.cefetmg.inf.medidaexata.view.fragments.QuestoesOuMateriasFragment"
    android:orientation="vertical" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ver_questoes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/AppTheme.MaterialCardView"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_qro_ver_as_questoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginBottom="16dp"
                android:text="@string/qro_ver_as_questoes_da_disciplina"
                android:textSize="24sp"
                android:textColor="?attr/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:text="@string/toque_neste_botao_para_ver_conteudos"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ver_materia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/AppTheme.MaterialCardView"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_qro_ver_as_materias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginBottom="16dp"
                android:text="@string/qro_ver_as_materias_da_disciplina"
                android:textSize="24sp"
                android:textColor="?attr/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:text="@string/toque_neste_botao_para_ver_as_materias_que_abordam_essa_disciplina"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
