<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.cefetmg.inf.medidaexata.view.fragments.ConquistasFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/suas_conquistas"
        android:textColor="@color/azul"
        android:textSize="28sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/ic_account_circle_black_24dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/AppTheme.MaterialCardView" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_nome_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/azul"
                    android:textSize="36sp"
                    tools:text="Nome"
                    tools:textColor="@color/azul"
                    tools:textSize="36sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:text="@string/vc_tem"
                    android:textColor="@color/azul"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.MaterialCardView"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_pontos_matematica"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:textColor="@color/azul_escuro"
                                android:textSize="48sp"
                                tools:text="200" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/pontos_em"
                                android:textColor="@color/azul"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/disc_matematica"
                                android:textColor="@color/azul_escuro"
                                android:textSize="24sp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/e"
                        android:textColor="@color/azul"
                        android:textSize="24sp" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.MaterialCardView"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/tv_pontos_ciencias"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginTop="8dp"
                                android:textColor="@color/verde_escuro"
                                android:textSize="48sp"
                                tools:text="300" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/pontos_em"
                                android:textColor="@color/verde"
                                android:textSize="24sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:text="@string/disc_ciencias"
                                android:textColor="@color/verde_escuro"
                                android:textSize="24sp" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/totalizando"
                        android:textColor="@color/azul"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_pontos_totais"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="500"
                        android:textColor="@color/azul_escuro"
                        android:textSize="64sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/uhu_pontos"
                        android:textColor="@color/azul"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
