<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.cefetmg.inf.medidaexata.view.activities.MainActivity"

    android:id="@+id/rl_rootv_disciplinas_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true" >

    <ProgressBar
        android:id="@+id/pb_carregando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_meio_tela_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_seja_bem_vindo_ao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/seja_bem_vindo_ao"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_medida_exata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/app_name"
            android:textColor="?attr/colorAccent"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/iv_logo_medida_exata"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/ctntdes_iv_medida_exata_logo"
            android:src="@drawable/ic_medida_exata_2x" />

        <TextView
            android:id="@+id/tv_toque_em_um_dos_botoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/toque_em_um_botao"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true" >

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb_menu_disciplinas_act"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/white"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:layout_scrollFlags="scroll|enterAlways"

                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@string/menu" />
            </com.google.android.material.appbar.AppBarLayout>

            <View
                android:id="@+id/dw_sombra_tb"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/sombra_cima_baixo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <FrameLayout
                    android:id="@+id/fl_frg_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/bttnav_app"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bttnav_app"
                    style="@style/Widget.MaterialComponents.BottomNavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/white"
                    app:elevation="8dp"
                    app:labelVisibilityMode="unlabeled"
                    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"

                    app:menu="@menu/menu_btt_nav" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>