<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_rootv_fragment_questoes"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="75dp"

    android:layout_marginLeft="@dimen/mtrl_card_margin_hrz"
    android:layout_marginRight="@dimen/mtrl_card_margin_hrz"
    android:layout_marginTop="@dimen/mtrl_card_margin"
    android:layout_marginBottom="@dimen/mtrl_card_margin_btt"

    app:cardBackgroundColor="@color/branco"

    app:cardCornerRadius="4dp"
    app:cardElevation="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_enunciado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="4dp"

            tools:text="João é legal"
            android:maxLength="100"
            android:textColor="@color/cinza"/>

        <TextView
            android:id="@+id/tv_conhecimento_abordado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="4dp"
            android:gravity="right"

            android:text="@string/con_abordado"
            android:textColor="@color/preto" />

        <TextView
            android:id="@+id/tv_obj_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="64dp"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:gravity="end"

            tools:text="asdasdasdasdsadasd"
            android:textColor="@color/cinza"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_ver_questao"
                style="@style/AppTheme.MaterialButtonOutlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/mtrl_bt_margin_hrz"
                android:layout_marginTop="@dimen/mtrl_bt_soft_margin_vrt"
                android:layout_marginBottom="@dimen/mtrl_bt_soft_margin_vrt"

                android:text="@string/ver_materia" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_ver_materia"
                style="@style/AppTheme.MaterialButtonOutlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginRight="@dimen/mtrl_bt_margin_hrz"
                android:layout_marginTop="@dimen/mtrl_bt_soft_margin_vrt"
                android:layout_marginBottom="@dimen/mtrl_bt_soft_margin_vrt"

                android:text="@string/ver_questao" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>